# ch32v003-cmake-template

./: .clangd  .gitignore  CMakeLists.txt  README.md  flash_and_monitor.sh
CH32V_firmware_library/Debug/: debug.h
User/: main.c
